--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": ">=7.2",
-        "codeigniter4/framework": "^4@alpha"
+      "codeigniter4/framework": "^4@alpha",
+      "ext-dom": "*",
+        "ext-simplexml": "*"
     },
     "require-dev": {
         "mikey179/vfsstream": "1.6.*",
